labs/5.grpc/3.grpcroute-header.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-namespace
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-header-matching
spec:
  parentRefs:
  - name: same-namespace
  rules:
  # Matches "version: one"
  - matches:
    - headers:
      - name: version
        value: one
    backendRefs:
    - name: grpc-infra-backend-v1
      port: 8080
  # Matches "version: two"
  - matches:
    - headers:
      - name: version
        value: two
    backendRefs:
    - name: grpc-infra-backend-v2
      port: 8080
  # Matches "headerRegex: grpc-header-[a-z]{1}"
  - matches:
    - headers:
      - name: headerRegex
        value: "grpc-header-[a-z]{1}"
        type: RegularExpression
    backendRefs:
    - name: grpc-infra-backend-v2
      port: 8080
  # Matches "version: two" AND "color: orange"
  - matches:
    - headers:
      - name: version
        value: two
      - name: color
        value: orange
    backendRefs:
    - name: grpc-infra-backend-v1
      port: 8080
  # Matches "color: blue" OR "color: green"
  - matches:
    - headers:
      - name: color
        value: blue
    - headers:
      - name: color
        value: green
    backendRefs:
    - name: grpc-infra-backend-v1
      port: 8080
  # Matches "color: red" OR "color: yellow"
  - matches:
    - headers:
      - name: color
        value: red
    - headers:
      - name: color
        value: yellow
    backendRefs:
    - name: grpc-infra-backend-v2
      port: 8080
